--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -1,7 +1,7 @@
 <div flex class="view-container" ng-controller="AlarmsCtrl as vm" layout="column">
 
     <div class="md-whiteframe-z1" layout="column">
-        <md-toolbar class="panel-toolbar">
+        <md-toolbar class="panel-toolbar md-whiteframe-z1">
             <div class="md-toolbar-tools" layout="row">
                <span>
                     <md-checkbox ng-model="vm.selectAllAlarms" ng-click="vm.toggleSelectAllAlarms(!vm.selectAllAlarms)" aria-label="Select All Alarms">
@@ -22,19 +22,29 @@
                 </section>
             </div>
         </md-toolbar>
-        <section class="alarms-list alarms-list-large" ng-click="vm.selectAllAlarms = false">
+        <div class="alarms-list alarms-list-large" ng-click="vm.selectAllAlarms = false">
             <md-list>
                 <md-item ng-repeat="item in vm.alarmsData | orderBy:vm.alarmsOrderBy.value | filter:vm.q as results">
                     <md-item-content ng-click="item.selected = !item.selected"
                                      ng-if="vm.showClearedAlarms || item.priority !== 'cleared'"
-                                     ng-switch="item.severity"
-                                     ng-class="{'alarm-list-item-badge-warn': item.severity === 'warn',
+                                     ng-switch="item.severity">
+
+                        <div class="background-div" style="background: white;"></div>
+
+                        <div class="background-div" ng-class="{'alarm-list-item-badge-warn': item.severity === 'warn',
                     'alarm-list-item-badge-error': item.severity === 'error',
                     'alarm-list-item-badge-critical': item.severity === 'critical',
                     'alarm-list-item-badge-maintenance': item.severity === 'maintenance',
                     'alarm-list-item-badge-nominal': item.severity === 'nominal',
                     'alarm-list-item-badge-unknown': item.severity === 'unknown',
-                    'selected-alarm-list-item': item.selected}">
+                    'selected-alarm-list-item': item.selected}"></div>
+
+                        <div class="background-div background-gradient-div-warn" ng-switch-when="warn"></div>
+                        <div class="background-div background-gradient-div-error" ng-switch-when="error"></div>
+                        <div class="background-div background-gradient-div-critical" ng-switch-when="critical"></div>
+                        <div class="background-div background-gradient-div-nominal" ng-switch-when="nominal"></div>
+                        <div class="background-div background-gradient-div-unknown" ng-switch-when="unknown"></div>
+                        <div class="background-div background-gradient-div-maintenance" ng-switch-when="maintenance"></div>
 
                         <div class="alarms-list-item-icon">
                             <span class="fa fa-warning" ng-switch-when="warn">
@@ -56,19 +66,13 @@
                                 <md-tooltip>Error</md-tooltip>
                             </span>
                         </div>
-                        <div class="md-tile-content alarms-list-item-content" layout="row" layout-padding style="z-index: 1" layout-align="start">
+                        <div flex class="md-tile-content alarms-list-item-content" layout="row" layout-padding style="z-index: 1" layout-align="start">
                             <span flex style="max-width: 170px; font-weight: bold; font-size: 16px;"><b>{{item.date}}</b></span>
                             <span flex style="max-width: 100px; text-overflow: ellipsis; font-size: 14px;"><i>{{item.priority}}</i></span>
                             <span flex style="max-width: 260px; text-overflow: ellipsis; font-size: 14px;">{{item.name}}</span>
-                            <span flex style="font-size: 14px;">{{item.message}}</span>
+                            <span flex style="font-size: 14px; overflow: hidden; text-overflow: ellipsis;" title="{{item.message}}">{{item.message}}</span>
                         </div>
 
-                        <div class="background-div background-gradient-div-warn" ng-switch-when="warn"></div>
-                        <div class="background-div background-gradient-div-error" ng-switch-when="error"></div>
-                        <div class="background-div background-gradient-div-critical" ng-switch-when="critical"></div>
-                        <div class="background-div background-gradient-div-nominal" ng-switch-when="nominal"></div>
-                        <div class="background-div background-gradient-div-unknown" ng-switch-when="unknown"></div>
-                        <div class="background-div background-gradient-div-maintenance" ng-switch-when="maintenance"></div>
                     </md-item-content>
                 </md-item>
                 <md-item ng-if="results.length === 0 && vm.alarmsData.length !== 0">
@@ -77,11 +81,11 @@
             </md-list>
 
             <div ng-if="vm.alarmsData.length === 0">No Current Alarms</div>
-        </section>
+        </div>
     </div>
 
-    <div class="md-whiteframe-z1" layout="column" style="margin-top: 16px;">
-        <md-toolbar class="panel-toolbar">
+    <div flex class="md-whiteframe-z1" layout="column" style="margin-top: 16px;">
+        <md-toolbar class="panel-toolbar md-whiteframe-z1">
             <div class="md-toolbar-tools" layout="row">
 
                <span>
@@ -106,19 +110,29 @@
             </div>
         </md-toolbar>
 
-        <section class="alarms-list alarms-list-small" ng-click="vm.selectAllKnownAlarms = false">
+        <div class="alarms-list alarms-list-small" ng-click="vm.selectAllKnownAlarms = false">
             <md-list>
                 <md-item ng-repeat="item in vm.knownAlarmsData  | orderBy:vm.alarmsKnownOrderBy.value | filter:vm.q2 as resultsKnown">
                     <md-item-content ng-if="(vm.showKnownNominalAlarms || item.severity !== 'nominal') && (vm.showKnownMaintenanceAlarms || item.severity !== 'maintenance')"
                                      ng-click="item.selected = !item.selected"
-                                     ng-switch="item.severity"
-                                     ng-class="{'alarm-list-item-badge-warn': item.severity === 'warn',
+                                     ng-switch="item.severity">
+
+                        <div class="background-div" style="background: white;"></div>
+
+                        <div class="background-div" ng-class="{'alarm-list-item-badge-warn': item.severity === 'warn',
                     'alarm-list-item-badge-error': item.severity === 'error',
                     'alarm-list-item-badge-critical': item.severity === 'critical',
                     'alarm-list-item-badge-maintenance': item.severity === 'maintenance',
                     'alarm-list-item-badge-nominal': item.severity === 'nominal',
                     'alarm-list-item-badge-unknown': item.severity === 'unknown',
-                    'selected-alarm-list-item': item.selected}">
+                    'selected-alarm-list-item': item.selected}"></div>
+
+                        <div class="background-div background-gradient-div-warn" ng-switch-when="warn"></div>
+                        <div class="background-div background-gradient-div-error" ng-switch-when="error"></div>
+                        <div class="background-div background-gradient-div-critical" ng-switch-when="critical"></div>
+                        <div class="background-div background-gradient-div-nominal" ng-switch-when="nominal"></div>
+                        <div class="background-div background-gradient-div-unknown" ng-switch-when="unknown"></div>
+                        <div class="background-div background-gradient-div-maintenance" ng-switch-when="maintenance"></div>
 
                         <div class="alarms-list-item-icon">
                             <span class="fa fa-warning" ng-switch-when="warn">
@@ -144,15 +158,9 @@
                             <span flex style="max-width: 170px; font-weight: bold; font-size: 16px;"><b>{{item.date}}</b></span>
                             <span flex style="max-width: 100px; text-overflow: ellipsis; font-size: 14px;"><i>{{item.priority}}</i></span>
                             <span flex style="max-width: 260px; text-overflow: ellipsis; font-size: 14px;">{{item.name}}</span>
-                            <span flex style="font-size: 14px;">{{item.message}}</span>
+                            <span flex style="font-size: 14px; overflow: hidden; text-overflow: ellipsis;" title="{{item.message}}">{{item.message}}</span>
                         </div>
 
-                        <div class="background-div background-gradient-div-warn" ng-switch-when="warn"></div>
-                        <div class="background-div background-gradient-div-error" ng-switch-when="error"></div>
-                        <div class="background-div background-gradient-div-critical" ng-switch-when="critical"></div>
-                        <div class="background-div background-gradient-div-nominal" ng-switch-when="nominal"></div>
-                        <div class="background-div background-gradient-div-unknown" ng-switch-when="unknown"></div>
-                        <div class="background-div background-gradient-div-maintenance" ng-switch-when="maintenance"></div>
                     </md-item-content>
                 </md-item>
                 <md-item ng-if="resultsKnown.length === 0 && vm.knownAlarmsData.length !== 0">
@@ -161,6 +169,6 @@
             </md-list>
 
             <div ng-if="vm.knownAlarmsData.length === 0">No Current Known Alarms</div>
-        </section>
+        </div>
     </div>
 </div>
