--- a/app/login-form/login-form.html
+++ b/app/login-form/login-form.html
@@ -1,6 +1,6 @@
 <div class="md-whiteframe-z4 login-form" ng-controller="LoginFormCtrl as vm">
     <div layout="column" layout-align="center center">
-        <md-toolbar class="md-theme-dark md-tall" layout-align="center center">
+        <md-toolbar class="md-theme-dark md-tall md-whiteframe-z1" layout-align="center center">
             <h1>katGUI</h1>
         </md-toolbar>
         <md-content md-theme="{{themePrimaryButtons}}" md-theme-watch="true">
