--- a/app/operator-control/operator-control.html
+++ b/app/operator-control/operator-control.html
@@ -1,7 +1,7 @@
 <div flex layout-padding ng-controller="OperatorControlCtrl as vm" style="min-width: 1000px; margin-left: 24px; margin-right: 24px;">
 
     <div class="md-whiteframe-z1">
-        <md-toolbar class="panel-toolbar">
+        <md-toolbar class="panel-toolbar md-whiteframe-z1">
             <div class="md-toolbar-tools">
                 <span>Operator Controls</span>
             </div>
