--- a/app/widgets/gantt/gantt-widget.html
+++ b/app/widgets/gantt/gantt-widget.html
@@ -1,6 +1,6 @@
 <div layout="column" class="" style="box-shadow: none;" ng-controller="GanttWidgetCtrl as vm">
 
-    <md-toolbar class="widget-toolbar">
+    <md-toolbar class="widget-toolbar md-whiteframe-z1">
         <!--<h3>Current Schedule Blocks</h3>-->
 
         <div style="margin-left: 300px; margin-top: 8px;">
