--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <md-toolbar md-theme="{{themeSecondary}}" class="md-whiteframe-z1" md-theme-watch="true">
             <h1 class="md-toolbar-tools side-nav-title">katGUI</h1>
         </md-toolbar>
-        <md-content class="md-content-padding" style="margin-top: 16px;">
+        <md-content class="md-content-padding" style="margin-top: 16px;" md-theme="none">
             <md-list>
                 <md-item>
                     <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('landing')">
@@ -178,7 +178,7 @@
         <md-toolbar md-theme="{{themeSecondary}}" class="md-whiteframe-z1" md-theme-watch="true">
             <h1 class="md-toolbar-tools side-nav-title">User Navigation</h1>
         </md-toolbar>
-        <md-content class="md-content-padding" style="margin-top: 16px;">
+        <md-content class="md-content-padding" style="margin-top: 16px;" md-theme="none">
             <md-list>
                 <md-item>
                     <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavRightStateGo('admin')">
