--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -1,6 +1,6 @@
 <div flex class="view-container" ng-controller="AlarmsCtrl as vm" layout="column">
 
-    <div class="md-whiteframe-z1" layout="column">
+    <div class="md-whiteframe-z1" layout="column" style="min-height: 620px;">
         <md-toolbar class="panel-toolbar md-whiteframe-z1">
             <div class="md-toolbar-tools" layout="row">
                <span>
@@ -84,7 +84,7 @@
         </div>
     </div>
 
-    <div flex class="md-whiteframe-z1" layout="column" style="margin-top: 16px;">
+    <div flex class="md-whiteframe-z1" layout="column" style="margin-top: 16px; margin-bottom: 16px; min-height: 360px;">
         <md-toolbar class="panel-toolbar md-whiteframe-z1">
             <div class="md-toolbar-tools" layout="row">
 
