--- a/app/operator-control/operator-control.html
+++ b/app/operator-control/operator-control.html
@@ -15,7 +15,7 @@
         </section>
 
         <md-list class="receptor-state-list">
-            <md-item ng-repeat="rec in vm.receptorsData track by $id(rec)">
+            <md-item ng-repeat="rec in vm.receptorsData">
                 <md-item-content class="receptor-state-div md-whiteframe-z1" layout="column">
                     <p style="min-height: 25px; max-width: 140px;">{{rec.fromNow}}<md-tooltip>{{rec.since}}</md-tooltip></p>
                     <p style="font-size: 26px;"><b>{{::rec.name}}</b></p>
