fixed up alarms to work again, added add animation to buttons

--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -1,6 +1,6 @@
 <div class="view-container-small" ng-controller="AdminCtrl as vm">
 
-    <card class="md-whiteframe-z1" layout="column">
+    <div class="md-whiteframe-z1" layout="column" style="margin-bottom: 16px;">
         <md-toolbar class="panel-toolbar md-whiteframe-z1">
             <div class="md-toolbar-tools" layout="row">
                 <span flex>Users</span>
@@ -82,6 +82,6 @@
                 </md-content>
             </md-item>
         </md-list>
-    </card>
+    </div>
 
 </div>
