--- a/app/scheduler/scheduler.html
+++ b/app/scheduler/scheduler.html
@@ -10,6 +10,7 @@
                                 <span flex></span>
                                 <md-button aria-label="Create A Draft" style="margin-right: 17px; font-size: 16px;" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}"
                                            ng-click="vm.addDraftSchedule()">
+                                    <div style="left: 0; top: 0; width: 38px; height: 38px; position: absolute;"><add-list-item-animation height="49" list="#schedule-draft-data-list-id"></add-list-item-animation></div>
                                     <span class="fa fa-plus"></span>
                                     <md-tooltip>Create A Schedule Draft</md-tooltip>
                                 </md-button>
