--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 <button class="unselectable toolbar-collapse-button" ng-class="{'toolbar-collapse-button-grey': !vm.showNavbar}"
         ng-click="vm.showNavbar = !vm.showNavbar">
     <i class="fa"
-       ng-class="{ 'fa-caret-square-o-up': vm.showNavbar,  'fa-caret-square-o-down': !vm.showNavbar}"></i>
+       ng-class="{ 'fa-caret-up': vm.showNavbar,  'fa-caret-down': !vm.showNavbar}"></i>
 </button>
 
 <div alarms-notifier></div>
